# CQAnalyzer

./: .gitignore  CMakeLists.txt  impl_command.txt  test.c  test.py  test_parser.c
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release/Testing/Temporary/: CTestCostData.txt
build_release/src/: Makefile  cmake_install.cmake
build_release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: cqanalyzer.h  dependency_manager.h
include/analyzer/: complexity_analyzer.h  dead_code_detector.h  duplication_detector.h  metric_calculator.h
include/data/: ast_types.h  data_store.h  dependency_graph.h  metric_aggregator.h  serialization.h
include/parser/: ast_parser.h  file_scanner.h  generic_parser.h  language_support.h  preprocessor.h
include/ui/: cli_interface.h  imgui_integration.h  input_handler.h  progress_display.h
include/utils/: config.h  error.h  localization.h  logger.h  memory.h  string_utils.h
include/visualizer/: bar_chart.h  bubble_chart.h  camera.h  color.h  complexity_landscape.h  gradient.h  heatmap.h  lighting.h  network_graph.h  picking.h  profiler.h  renderer.h  scatter_plot.h  scene.h  shader.h  text_renderer.h  timeline.h  transforms.h  tree_visualization.h  visualization_filters.h
roadmaps/: implementation_plan.txt
src/: CMakeLists.txt  cqanalyzer.c  main.c  main_gui.c
src/analyzer/: complexity_analyzer.c  dead_code_detector.c  duplication_detector.c  metric_calculator.c
src/data/: ast_data.c  ast_types.c  data_store.c  dependency_graph.c  metric_aggregator.c  serialization.c
src/parser/: ast_parser.c  file_scanner.c  generic_parser.c  language_support.c  preprocessor.c
src/ui/: cli_interface.c  imgui_integration.c  imgui_integration.h  input_handler.c  metric_applicator.c  metric_applicator.h  metric_config.c  metric_config.h  progress_display.c  theme_manager.c  theme_manager.h
src/utils/: bmp_writer.c  bmp_writer.h  config.c  dependency_manager.c  error.c  localization.c  logger.c  memory.c  stb_image_write.h  string_utils.c
src/visualizer/: bar_chart.c  bubble_chart.c  camera.c  color.c  complexity_landscape.c  gradient.c  heatmap.c  lighting.c  network_graph.c  picking.c  profiler.c  renderer.c  scatter_plot.c  scene.c  shader.c  text_renderer.c  timeline.c  transforms.c  tree_visualization.c  visualization_filters.c
src/visualizer/shaders/: phong.frag  phong.vert
test_demo/: screenshot_demo  screenshot_demo.c
tests/: CMakeLists.txt  test_analyzer.c  test_bar_chart.c  test_bar_chart_simple.c  test_data.c  test_dependency_manager.c  test_docking.c  test_error.c  test_imgui_integration.c  test_localization.c  test_main.c  test_metric_config.c  test_parser.c  test_profiler.c  test_renderer.c  test_sample.c  test_theme_manager.c  test_ui.c  test_ui_dialogs.c  test_utils.c  test_visualizer_save_load.c
